...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- RecyclerView for the list of saved logins -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_logins"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        android:clipToPadding="false"
        android:scrollbars="vertical"
        android:contentDescription="@string/scrollable_list_desc"
        app:layout_constraintTop_toBottomOf="@id/title_text_view"
        app:layout_constraintBottom_toTopOf="@id/new_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_login" />

    <!-- New Button -->
    <Button
...
